# DialPWM

./: README.md  ç
HDL/UART.srcs/constrs_1/imports/new/: Basys3_Master.xdc
HDL/UART.srcs/sources_1/new/: UART.vhd  UART_TB.vhd
app/: Cargo.toml
app/src/: main.rs  pwm.rs  serial_ctrl.rs
app/src/app_ui/: ui.rs
app/src/app_ui/res/: ui.fl
app/src/ui/: ui.rs
app/src/ui/res/: ui_.fl
app/src/util/: raw_ptr.rs
