[package]
name = "DialPWM"
version = "0.1.0"
edition = "2021"

[dependencies]
#scanf = "1.2.3"
clap = { version = "4.5.30", features = ["derive"] }
serialport = "4.2"
libc = "0.2.169"
windows = { version = "0.60.0", features = ["Win32_System_Threading"] }
fltk = "1.5.4"
fl2rust-macro = "0.7.0"
array-init = "2.1.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 'z'
lto = true
strip = true
